# media-transparency

./: .dockerignore  .env.example  .gitignore  README.md  privacy.html  project.md
backend/: README.md  alembic.ini  pyproject.toml  test_canadian_corp.py  test_corps.csv  test_org_research.py  test_quick_ingest.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_detection_tables.py  003_resolution_tables.py  004_ingestion_run_logs.py  005_research_tables.py  006_provincial_registry.py  007_provincial_sources.py  008_cases.py  009_case_reports_ads.py  010_meta_oauth_tokens.py  011_political_ad_funding.py
backend/openapi/: README.md  openapi.json  openapi.yaml
backend/openapi/components/: parameters.yaml  responses.yaml  security.yaml
backend/openapi/components/schemas/: cases.yaml  common.yaml  detection.yaml  entities.yaml  ingestion.yaml  jobs.yaml  relationships.yaml  reports.yaml  research.yaml  resolution.yaml  settings.yaml  validation.yaml
backend/openapi/paths/: cases.yaml  detection.yaml  entities.yaml  health.yaml  ingestion.yaml  jobs.yaml  meta-oauth.yaml  relationships.yaml  reports.yaml  research.yaml  resolution.yaml  settings.yaml  validation.yaml
backend/src/: main.py
backend/src/mitds/: __init__.py  cache.py  config.py  db.py  logging.py  storage.py  worker.py
backend/src/mitds/api/: __init__.py  audit.py  auth.py  cases.py  detection.py  docs.py  entities.py  ingestion.py  jobs.py  meta_oauth.py  middleware.py  pagination.py  relationships.py  reports.py  research.py  resolution.py  sanitization.py  settings.py  tool_gateway.py  validation.py
backend/src/mitds/cases/: __init__.py  manager.py  models.py
backend/src/mitds/cases/adapters/: __init__.py  base.py  corporation.py  meta_ads.py  text.py  url.py
backend/src/mitds/cases/extraction/: __init__.py  deterministic.py  llm.py  pipeline.py
backend/src/mitds/cases/reports/: __init__.py  generator.py  (+2 more)
backend/src/mitds/cli/: __init__.py  analyze.py  cases.py  detect.py  dev.py  ingest.py  research.py  resolve.py  verify.py
backend/src/mitds/detection/: __init__.py  composite.py  funding.py  hardneg.py  infra.py  political_funding.py  temporal.py
backend/src/mitds/graph/: __init__.py  builder.py  queries.py  temporal.py
backend/src/mitds/ingestion/: __init__.py  _template.py  base.py  beneficial_ownership.py  canada_corps.py  canlii.py  cra.py  edgar.py  elections_alberta.py  elections_bc.py  elections_canada.py  elections_ontario.py  events.py  google_ads.py  irs990.py  linkedin.py  littlesis.py  lobbying.py  lobbying_bc.py  meta_ads.py  opencorp.py  ppsa.py  run_log.py  search.py  sedar.py  tracking.py
backend/src/mitds/models/: __init__.py  base.py  detection.py  entities.py  events.py  evidence.py  relationships.py
backend/src/mitds/quality/: __init__.py  metrics.py
backend/src/mitds/reporting/: __init__.py  explain.py  language.py  templates.py
backend/src/mitds/research/: __init__.py  models.py  processor.py  queue.py  registry.py  session.py
backend/src/mitds/resolution/: __init__.py  cross_border.py  matcher.py  reconcile.py  resolver.py
backend/src/mitds/services/: __init__.py  meta_token.py
backend/src/mitds/validation/: __init__.py  dashboard.py  golden.py  metrics.py  synthetic.py
backend/tests/: __init__.py  test_cross_border.py
backend/tests/fixtures/: __init__.py  database.py  entities.py  evidence.py  relationships.py
backend/tests/fixtures/verification/: __init__.py  bc_lobbying_reference.json  beneficial_ownership_reference.json  canlii_reference.json  elections_canada_reference.json  google_ads_reference.json
backend/tests/integration/: test_canadian_ownership.py
backend/tests/integration/cases/: __init__.py  conftest.py  test_corporation_flow.py  test_meta_ad_flow.py  test_real_integration.py  test_review_flow.py  test_text_flow.py  test_url_flow.py
backend/tests/integration/political_funding/: __init__.py  test_bc_lobbying.py  test_beneficial_ownership.py  test_canlii.py  test_elections_ingestion.py  test_funding_chain_report.py  test_google_ads.py  test_obfuscation_detector.py  test_research_session.py
backend/tests/unit/: test_edgar_canadian.py  test_irs990_batch.py  test_sedar.py
backend/tests/unit/cases/: __init__.py  conftest.py  test_adapters.py  test_extraction.py  test_resolution.py  test_review.py
backend/tests/unit/political_funding/: __init__.py  test_contributor_extraction.py  test_isc_scraper.py  test_obfuscation_scoring.py  test_pdf_parser.py
(+85 files in other folders)
