[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mitds"
version = "0.1.0"
description = "Media Influence Topology & Detection System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MITDS Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Task Queue
    "celery[redis]>=5.3.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Graph Algorithms
    "networkx>=3.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Neo4j
    "neo4j>=5.15.0",

    # Redis
    "redis>=5.0.0",

    # S3/Object Storage
    "boto3>=1.34.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # XML Processing (IRS 990)
    "lxml>=5.1.0",
    "defusedxml>=0.7.1",

    # PDF Processing (SEDAR+)
    "pdfplumber>=0.10.0",

    # Excel/XLSX Processing (Provincial data)
    "openpyxl>=3.1.0",

    # Fuzzy Matching
    "rapidfuzz>=3.6.0",

    # Embeddings (optional, for advanced matching)
    "sentence-transformers>=2.3.0",

    # Statistics
    "scipy>=1.12.0",

    # Utilities
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",

    # CLI
    "click>=8.1.0",

    # Content Extraction (for Case Intake)
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",

    # Linting & Formatting
    "ruff>=0.1.14",
    "black>=24.1.0",
    "mypy>=1.8.0",

    # Type stubs
    "types-python-dateutil>=2.8.19",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.1.4",
]

[project.scripts]
mitds = "mitds.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mitds"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

# =========================
# Ruff Configuration
# =========================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
    "B904",   # raise from in except (too noisy)
]

[tool.ruff.lint.isort]
known-first-party = ["mitds"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "ARG002"]

# =========================
# Black Configuration
# =========================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# =========================
# Mypy Configuration
# =========================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =========================
# Pytest Configuration
# =========================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =========================
# Coverage Configuration
# =========================
[tool.coverage.run]
source = ["src/mitds"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
